css/object_inspector.css
/**
 OBJECT-INSPECTOR
 ================
 The Object inspector
 at the far right of the screen
*/

.object-inspector {
  background-color: white;
}

.object-inspector__header {
  position: relative;
  font-family: Menlo, Monaco, monospace;
  text-shadow: 0px 1px 1px #fff;
  padding: 10px 5px 10px 35px;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  min-height: 40px;
}

.object-inspector__header-main {
  font-size: 15px;
  color: #646464;
  font-weight: bold;
  margin-bottom: 0;
  width: 100%;
  display: -webkit-flex;
  display: flex;
}

.object-inspector__header-trail {
  margin-top: 5px;
  word-break: break-all;
}

.object-inspector__back {
  position: absolute;
  display: block;
  width: 22px;
  height: 22px;
  top: 8px;
  left: 7px;
  border-radius: 11px;
  background: #ccc url('../images/back_arrow.png') 5px center no-repeat;
  border: none;
}

.object-inspector__back_state_enabled {
  cursor: pointer;
}

.object-inspector__back_state_enabled:hover {
  opacity: 1;
}

.object-inspector__back_state_enabled:active {
  opacity: 0.8;
}

.object-inspector__back_state_disabled {
  opacity: 0.4;
}

.object-inspector__name {
  -webkit-flex-basis: 0px;
  -webkit-flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-basis: 0px;
  flex-grow: 1;
  flex-shrink: 1;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.object-inspector__send-object-btn {
  border: none;
  background: none;
  margin: 0;
  padding: 0;
  width: 20px;
  opacity: 1;
}

.object-inspector__send-object-btn img {
  margin-right: 3px;
  width: 20px;
}

